# AnalogDevicesOA

./: .gitignore  LICENSE  README.md  docker-compose.yaml
src/backend/: Cargo.toml  Dockerfile  README.md  diesel.toml
src/backend/src/: lib.rs  main.rs
src/backend/src/controllers/: mod.rs  producer_controllers.rs
src/backend/src/diesel/: models.rs  schema.rs
src/backend/src/diesel/migrations/2024-11-26-014459_init/: down.sql  up.sql
src/backend/src/routes/: mod.rs  producer_routes.rs
src/backend/src/services/: mod.rs  producer_services.rs
src/backend/src/transformers/: mod.rs  producer_transformer.rs
src/backend/src/utils/: error.rs  message_creator.rs  message_utils.rs  mod.rs  random_utils.rs  sender.rs  uuid.rs
src/backend/tests/: mod.rs  test_utils.rs
src/backend/tests/integration/services/: mod.rs  producer_services_test.rs  sender_test.rs
src/backend/tests/unit/utils/: message_creator_test.rs  mod.rs  random_utils_test.rs  sender_test.rs  uuid_test.rs
src/frontend/: README.md  index.html  package-lock.json  package.json  setupTests.ts  tailwind.config.js  vite.config.ts
src/frontend/src/: index.css  main.tsx
src/frontend/src/api/: fetch.ts  producer.api.ts
src/frontend/src/app/: App.tsx  AppContextQuery.tsx
src/frontend/src/components/: ErrorPage.tsx  IconDisplay.tsx  MessageBreakdown.tsx  MessageDurationDistribution.tsx  ProducerCard.tsx  ThemeProvider.tsx
src/frontend/src/hooks/: producer.hooks.ts  use-toast.ts
src/frontend/src/utils/: routes.ts  types.ts  urls.ts
src/frontend/tests/unit/: test-data.ts  test-utils.ts
(+23 files in other folders)
